Fix feature table word-wrapping

--- a/nextgisweb/feature_layer/amd/ngw-feature-layer/resource/FieldsDisplayWidget.css
+++ b/nextgisweb/feature_layer/amd/ngw-feature-layer/resource/FieldsDisplayWidget.css
@@ -1,4 +1,4 @@
-.ngw-feature-layer-FieldsDisplayWidget .pure-table { width: 100%; }
+.ngw-feature-layer-FieldsDisplayWidget .pure-table { width: 100%; table-layout: fixed; }
 
 .ngw-feature-layer-FieldsDisplayWidget .pure-table .display_name { width: 25%;}
 
@@ -11,7 +11,7 @@
 
 .ngw-feature-layer-FieldsDisplayWidget .pure-table tr > td,
 .ngw-feature-layer-FieldsDisplayWidget .pure-table tr > th {
-    word-break: break-word;
+    word-wrap: break-word;
 }
 
 .ngw-feature-layer-FieldsDisplayWidget.compact .pure-table {
@@ -25,9 +25,6 @@
 .ngw-feature-layer-FieldsDisplayWidget.compact .pure-table:last-child{
     border-bottom: 0;
 }
-
-.ngw-feature-layer-FieldsDisplayWidget.compact .pure-table .display_name { width: auto; }
-
 
 .ngw-feature-layer-FieldsDisplayWidget.compact  .pure-table td, 
 .ngw-feature-layer-FieldsDisplayWidget.compact  .pure-table th {
